archetect-minijinja/tests/snapshots/test_templates__vm@extends_set.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{% extends template %}\n{% set var = \"the value from the child\" %}"
info:
  template: layout_with_var.txt
input_file: archetect_minijinja/tests/inputs/extends_set.txt
---
the value from the child

