archetect-minijinja/tests/snapshots/test_templates__vm@filter.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{{ value|upper }}"
info:
  value: foo bar baz
input_file: archetect_minijinja/tests/inputs/filter.txt
---
FOO BAR BAZ

