archetect-minijinja/tests/snapshots/test_templates__vm@filter_block.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{% filter upper %}{{ egg }}{% endfilter %}"
info:
  egg: Humpty Dumpty sat on a wall
input_file: archetect_minijinja/tests/inputs/filter_block.txt
---
HUMPTY DUMPTY SAT ON A WALL

