archetect-minijinja/tests/snapshots/test_templates__vm@hello.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "Hello {{ name }}!"
info:
  name: World
input_file: archetect_minijinja/tests/inputs/hello.txt
---
Hello World!

