archetect-minijinja/tests/snapshots/test_templates__vm@if_cond_elif.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{% if value %}\n  first branch\n{% elif other_value %}\n  second branch\n{% else %}\n  else\n{% endif %}"
info:
  other_value: false
  value: false
input_file: archetect_minijinja/tests/inputs/if_cond_elif.txt
---

  else


